# cc-segmentation-eda-mlflow

./: LICENSE  Makefile  README.md  mlflow.db  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
mlartifacts/1/3d923057c75a49caa889b4bcce7f0016/artifacts/model_artifacts/: model_kmeans.pkl
mlartifacts/1/5b9a9444d0934e00a8028bea50f8971d/artifacts/model_artifacts/: model_kmeans.pkl
mlartifacts/1/77e1724a43244e2b8d56dac7c1b6c781/artifacts/model_artifacts/: model_kmeans.pkl
mlartifacts/1/933f556666394a48b3eb416c2ddf0092/artifacts/model_artifacts/: model_kmeans.pkl
mlartifacts/1/988df5c03d80496f90bae57f15befaea/artifacts/model_artifacts/: model_kmeans.pkl
mlartifacts/1/c46d1154140344988a8361f9ee9189c3/artifacts/model_artifacts/: model_kmeans.pkl
mlartifacts/1/f0c7eb7a6c364d0a861799b4e6589803/artifacts/prediction_artifacts/: test_predictions_cluster.csv
mlruns/2/370865797bc4442897398c7518ae0d5e/artifacts/model_artifacts/: model.pkl
models/: imputation_medians.pkl  imputation_medians_regression.pkl  model_rf.pkl  pipeline_clustering.pkl  pipeline_regression.pkl  quantile_transformer.pkl
notebooks/: eda.ipynb
reports/: perfil_clusters.csv
src/: __init__.py  dataset.py  features.py  features_clustering.py  features_regression.py  plots.py  rascunhos.ipynb
src/modeling/: analisys_clustering.py  predict.py  predict_classification.py  predict_clustering.py  train.py  train_classification.py  train_clustering.py
