[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cc_segmentation_eda_mlflow"
version = "0.1.0"
description = "An end-to-end customer segmentation project using K-Means and PCA on credit card usage data, fully tracked with MLflow."
authors = [
  { name = "Vaneza Novais" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.12"

# ESSA É A PARTE QUE ESTÁ FALTANDO:
# Avisa ao Flit que o código está na pasta 'src' e não em uma pasta com o nome do projeto
[tool.flit.module]
name = "src"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true